--- a/index.html
+++ b/index.html
@@ -83,39 +83,45 @@
         titleRow.appendChild(rating);
 
         // Standalone
-        const standaloneDiv = document.createElement('div');
-        standaloneDiv.className = 'text-xs text-white mb-1';
-        standaloneDiv.innerHTML = 'Standalone: ';
+const standaloneDiv = document.createElement('div');
+standaloneDiv.className = 'text-xs text-white mb-1';
+standaloneDiv.innerHTML = 'Standalone: ';
 
-        const yesSpan = document.createElement('span');
-        yesSpan.textContent = 'Yes';
-        yesSpan.className = mod.standalone
-          ? 'border border-white bg-yellow-400 bg-opacity-45 px-1 py-[0.5px] rounded-sm text-[9px] inline-block text-white ml-1'
-          : 'text-white text-[9px] ml-1';
+const yesSpan = document.createElement('span');
+yesSpan.textContent = 'Yes';
+yesSpan.className = mod.standalone
+  ? 'border border-white bg-yellow-400 bg-opacity-45 px-1 py-[0.5px] rounded-sm text-[9px] inline-block text-white ml-1'
+  : 'text-white text-[9px] ml-1';
 
-        const noSpan = document.createElement('span');
-        noSpan.textContent = 'No';
-        noSpan.className = !mod.standalone
-          ? 'border border-white bg-yellow-400 bg-opacity-45 px-1 py-[0.5px] rounded-sm text-[9px] inline-block text-white ml-1'
-          : 'text-white text-[9px] ml-1';
+const noSpan = document.createElement('span');
+noSpan.textContent = 'No';
+noSpan.className = !mod.standalone
+  ? 'border border-white bg-yellow-400 bg-opacity-45 px-1 py-[0.5px] rounded-sm text-[9px] inline-block text-white ml-1'
+  : 'text-white text-[9px] ml-1';
 
-        standaloneDiv.appendChild(yesSpan);
-        standaloneDiv.appendChild(document.createTextNode(' '));
-        standaloneDiv.appendChild(noSpan);
+standaloneDiv.appendChild(yesSpan);
+standaloneDiv.appendChild(document.createTextNode(' | '));
+standaloneDiv.appendChild(noSpan);
+
 
         // Platform
-        const platformDiv = document.createElement('div');
-        platformDiv.className = 'text-xs text-white mb-1';
-        platformDiv.innerHTML = 'Platform: ';
+const platformDiv = document.createElement('div');
+platformDiv.className = 'text-xs text-white mb-1';
+platformDiv.innerHTML = 'Platform: ';
 
-        ['Shadow of Chernobyl', 'Clear Sky', 'Call of Pripyat'].forEach(plat => {
-          const span = document.createElement('span');
-          span.textContent = plat;
-          span.className = (mod.platform === plat)
-            ? 'border border-white bg-yellow-400 bg-opacity-50 px-1 py-[0.5px] rounded-sm text-[9px] inline-block text-white ml-1'
-            : 'text-white text-[9px] ml-1';
-          platformDiv.appendChild(span);
-        });
+['Shadow of Chernobyl', 'Clear Sky', 'Call of Pripyat'].forEach((plat, idx, arr) => {
+  const span = document.createElement('span');
+  span.textContent = plat;
+  span.className = (mod.platform === plat)
+    ? 'border border-white bg-yellow-400 bg-opacity-50 px-1 py-[0.5px] rounded-sm text-[9px] inline-block text-white ml-1'
+    : 'text-white text-[9px] ml-1';
+  platformDiv.appendChild(span);
+  if (idx < arr.length - 1) {
+    platformDiv.appendChild(document.createTextNode(' | '));
+  }
+});
+
+        
 
         const desc = document.createElement('p');
         desc.className = 'text-gray-400 mb-1 text-sm';
