--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         // Title + Rating
         const titleRow = document.createElement('div');
-        titleRow.className = 'flex justify-between items-center mb-1';
+        titleRow.className = 'flex justify-between items-center mb-3';  // Space between Title & Next Line
 
         const title = document.createElement('h3');
         title.className = 'text-xl font-semibold';
