--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 // Standalone
 const standaloneDiv = document.createElement('div');
-standaloneDiv.className = 'text-xs text-white mb-1';
+standaloneDiv.className = 'text-xs text-white font-bold mb-1';
 standaloneDiv.innerHTML = 'Standalone: ';
 
 const standaloneWrapper = document.createElement('div'); // renamed to standaloneWrapper
@@ -113,7 +113,7 @@ standaloneDiv.appendChild(standaloneWrapper);
 
 // Platform
 const platformDiv = document.createElement('div');
-platformDiv.className = 'text-xs text-white mb-1';
+platformDiv.className = 'text-xs text-white font-bold mb-1';
 platformDiv.innerHTML = 'Platform: ';
 
 const platformWrapper = document.createElement('div'); // renamed to platformWrapper
