--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ standaloneDiv.className = 'text-xs text-white mb-2 flex items-center'; // mb-2 f
 
 const labelStandalone = document.createElement('span');
 labelStandalone.textContent = 'Standalone:';
-labelStandalone.className = 'mr-2 leading-tight'; // lighter right margin, no bold
+labelStandalone.className = 'mr-2 font-bold leading-tight'; // lighter right margin, no bold
 standaloneDiv.appendChild(labelStandalone);
 
 const standaloneWrapper = document.createElement('div');
@@ -124,7 +124,7 @@ platformDiv.className = 'text-xs text-white mb-2 flex items-center'; // mb-2 for
 
 const labelPlatform = document.createElement('span');
 labelPlatform.textContent = 'Platform:';
-labelPlatform.className = 'mr-2 leading-tight'; // no bold, small right margin
+labelPlatform.className = 'mr-2 font-bold leading-tight'; // no bold, small right margin
 platformDiv.appendChild(labelPlatform);
 
 const platformWrapper = document.createElement('div');
