--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ platformDiv.appendChild(platformWrapper);
         
 
         const desc = document.createElement('p');
-        desc.className = 'text-gray-400 mb-1 text-sm';
+        desc.className = 'text-gray-400 mb-2 text-sm'; // Spacing
         desc.textContent = mod.description;
 
         const links = document.createElement('div');
