--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         titleRow.className = 'flex justify-between items-center mb-3';  // Space between Title & Next Line
 
         const title = document.createElement('h3');
-        title.className = 'text-xl font-semibold'; // Title size (xl - 2xl - 3xl ...)
+        title.className = 'text-2xl font-semibold text-white drop-shadow';  // Title size (xl - 2xl - 3xl ...)
         title.textContent = mod.title;
 
         const rating = document.createElement('div');
